fix product_descrition overflow
mirror

--- a/src/main/webapp/WEB-INF/views/resources/css/product.css
+++ b/src/main/webapp/WEB-INF/views/resources/css/product.css
@@ -863,6 +863,7 @@ h1, h2, h3, h4, h5, h6 {
     margin: 10px auto 0;
 }
 .bid{
+    overflow: hidden;
     padding: 15px 15px 0;
     font-size: 11px;
     background-color: #fff;
